--- a/_tabs/quienes-somos.html
+++ b/_tabs/quienes-somos.html
@@ -3,30 +3,18 @@ title: Quiénes somos
 icon: fas fa-info
 order: 5
 profes:
-  - nombre: Federico Aloi
+  - nombre: Miguel Carboni
     cargo: Docente
-    github: faloi
-    instagram: surprograma
-    youtube: UCfrRa43tBrOYYYfgJqsJ7qg
+    github: miguelius
+#    instagram: lodemiguel
+#    youtube: UCfrRa43tBrOYYYfgJqsJ7qg
     bio: >
-      Docente y programador egresado de UNQ. Estudio Educación en UNaHur y estoy construyendo una casa rodante para viajar por Latinoamérica. :earth_americas: :minibus:
-  - nombre: Rodrigo Alfonso
-    cargo: Docente
-    github: rodri042
-    web: https://r-labs.io
-    bio: >
-      Ingeniero en Sistemas dedicado a la programación. Amante de los distintos subgéneros del metal, los videojuegos y la tecnología. 🤟🏽 :space_invader: 🖥
+      Docente e Ingeniero en Sistemas. Curioso por naturaleza. 
   - nombre: Marcelo Torres
     cargo: Alumno asistente
     github: MarceloTorres88
     bio: >
       Estudiante de Segundo año. Procrastinador en rehabilitación, amateur del basquet.
-  - nombre: Matías Angeli
-    cargo: Colaborador
-    github: AngeliM96
-    bio: >
-      Estoy terminando el segundo año de la Tecnicatura a la vez que curso algunas materias de la Licenciatura.
-      Me gusta Star Wars, la música, toco varios instrumentos y mi comida favorita son los tacos.
 ---
 
 <div class="card-deck">
